OBPIH-7728 Make data on PO shipment more readable avoid inline styles

--- a/src/js/components/stock-movement-wizard/StockMovement.scss
+++ b/src/js/components/stock-movement-wizard/StockMovement.scss
@@ -238,6 +238,16 @@
             top: -40px;
         }
 
+        .delete-icon {
+            color: var(--red);
+            font-size: 1rem;
+        }
+
+        .split-icon {
+            color: var(--green);
+            font-size: 1rem;
+        }
+
         .inbound-actions {
             display: flex;
             justify-content: space-evenly;
